compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/funKeyword.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL
fun<!SYNTAX, SYNTAX!><!>

/* GENERATED_FIR_TAGS: functionDeclaration */
